# OptiChain---Java

./: .gitignore  Dockerfile  README.md  graph.txt  inv.txt
backend/: app.py
data/: inventory.csv  routes.csv  warehouses.csv
engine/: CMakeLists.txt  allocator.cpp  allocator.h  demand.cpp  demand.h  fenwick.cpp  fenwick.h  graph.cpp  graph.h  json.hpp  main.cpp  splitter.cpp  splitter.h
engine/src/main/java/com/optiflow/engine/: DemandTracker.java  FenwickTree.java  Graph.java  InventoryManager.java  OptiFlowServer.java  OrderAllocator.java  OrderSplitter.java
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: Dashboard.jsx  DemandTracker.jsx  GraphView.jsx  InventoryView.jsx  OrderPanel.jsx
